[package]
name = "clap_allgen"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["string"] }
clap_complete = "4.4.6"
clap_mangen = "0.2.16"
thiserror = "1.0.56"

[dev-dependencies]
clap = { version = "4.4.14", features = ["derive"] }
rstest = "0.18.2"
tempfile = "3.9.0"
testresult = "0.3.0"
